Fix for too small search input for topics on the search page

--- a/less/gn_search_dutch.less
+++ b/less/gn_search_dutch.less
@@ -305,6 +305,14 @@
   // margin-top: -25px;
   padding: 30px 20px 20px 20px;
   margin-bottom: 20px;
+  .dutch-search-topic {
+    .input-group {
+      display: block;
+    }
+    .dropdown-menu {
+      width: 100%;
+    }
+  }
 }
 // ----- sort options
 .gn-sort-by .btn-group > button, .gn-sort-by .btn-group > button:hover, .gn-sort-by .btn-group > button:focus, .gn-sort-by .btn-group > button:active {
