--- a/less/gn_view_dutch.less
+++ b/less/gn_view_dutch.less
@@ -446,3 +446,10 @@ max-height:150px;
 .gn-metadata-display {
   background-color:white;
 }
+
+// styling for the scrollbar
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #fff;
+}
